# dial-app-actions-demo

./: .gitignore  README.md  docker-compose-colima.yml  docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml
app/application/: dial_application.py
dial/config/: config-template.json  config.json
tools/: update-dial-config.sh
