[tool.poetry]
name = "dial-app"
version = "0.1.0"
description = ""
authors = ["uladkaminski <kaminski.uladzislau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
aidial-sdk = "^0.8.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
